<resources>
    <string name="app_name">Aqar55</string>
    <string name="times_sighup_otp">00:00</string>
    <string name="resend"><u>Resend</u></string>
    <string name="api_key">AIzaSyAm-mDaJdqON-Y1siJ1KCnOoum_bwPyNZs</string>
    <string name="property_business_professional_brief_here">Property/Business/Professional\nbrief here</string>
    <string name="terms_condition"><![CDATA[Terms & Condition]]></string>
    <string name="textview">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="do_you_want_to_delete_this_chat">Do You Want to Delete this\nchat?</string>
    <string name="your_property_has_been_successfully">Your property has been posted\nsuccessfully!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_number_of_showroom">Select no of\nshowroom</string>
    <string name="get_default_note">Note: please you must select your preferred time period  &amp; price. \nWe will use it as default</string>
    <string name="i_agree_terms_amp_condition">I agree to the</string>
    <string name="hello_naveen">Hello <font fgcolor="#000000"><b>Aqar</b></font></string>
    <string name="welcome_to_aquar55">Welcome to <font fgcolor="#091cea">Aqar55</font></string>
    <string name="money_value"><font fgcolor="#091cea">$1,00,000</font></string>
    <string name="professional_id_5263632">Professional ID 5263632</string>
    <string name="_1_00_000">$1,00,000</string>
    <string name="property_for_rent">Property For Rent</string>
    <string name="price_1_00_000">Price <font fgcolor="#091cea">$1,00,000</font> Daily</string>
    <string name="new_york"><b>.</b> New York</string>
    <string name="specialities_1"><b>.</b> Specialities 1</string>
    <string name="body_foodie">Aqar is the right app if you are looking for apartments for rent or villas for sale or rent  or land for sale in Saudi Arabia. Aqar displays all Saudi real estates ads on Google Maps; navigate in the area you like and find your next home !
You can directly contact the owner and make the deal. \n \n App Store : https://apps.apple.com/us/app/aqar55/id1472194209?ls=1 \n \n Play store : https://play.google.com/store/apps/details?id=com.aqar55&amp;hl=en_US</string>
    <string name="liked">Liked</string>
    <string name="sale">Sale</string>
    <string name="rent">Rent</string>
    <string name="business">Business</string>
    <string name="professional">Professional</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="skip_to_explore_aqar55">Skip to Explore Aqar55</string>
    <string name="location_search">Location Search</string>
    <string name="category_1">Category 1</string>
    <string name="category_3">Category 3</string>
    <string name="category_2">Category 2</string>
    <string name="manage_my_property">Manage My Property</string>
    <string name="inactive">Inactive</string>
    <string name="active">active</string>
    <string name="djcddd">djcddd</string>
    <string name="done">Done</string>
    <string name="post_a_property">Post a Property</string>
    <string name="for_sale">For Sale</string>
    <string name="for_rent">For Rent</string>
    <string name="_1_of_8">1 of 8</string>
    <string name="business_id">Business ID</string>
    <string name="professional_category">Professional Category</string>
    <string name="professional_sub_category">Professional Sub-category</string>
    <string name="government_id_s">Government ID\'s</string>
    <string name="description">Description*</string>
    <string name="project_achieved">Project Achieved</string>
    <string name="office_address">Office Address</string>
    <string name="office_number">Office Number</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="specialities">Specialities</string>
    <string name="areas_covered">Areas Covered</string>
    <string name="sort_by">Sort by</string>
    <string name="map">Map</string>
    <string name="recent">Recent</string>
    <string name="search">Search</string>
    <string name="mobile_verification">Mobile Verification</string>
    <string name="we_have_sent_you_a_verification_code_via_sms_for_mobile_number_verification">We have sent you a verification code via SMS for Mobile number verification</string>
    <string name="sent_to_000966_52636325">Sent to +000966 52636325</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="please_select_date_of_birth">Please Select Date Of Birth</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="ok">OK</string>
    <string name="select_currency">Select Currency</string>
    <string name="select_measurement">Select Measurement</string>
    <string name="select_app_language">Select App Language</string>
    <string name="select_speak_language">Select Speak Language</string>
    <string name="back">Back</string>
    <string name="please_enter_your_phone_number_to_get_otp">Please Enter Your Phone number to get OTP</string>
    <string name="phone_number">Phone Number</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_printing">Lorem Ipsum is simply dummy text of printing</string>
    <string name="cancel">CANCEL</string>
    <string name="my_posted_properties">My Posted Properties</string>
    <string name="camera">Camera</string>
    <string name="info">Info</string>
    <string name="about_us">About Us</string>
    <string name="add_image">Add Image</string>
    <string name="add_caption_here">Add Caption Here</string>
    <string name="add_media">Add Media</string>
    <string name="video_title">video title</string>
    <string name="add_location">Add Location</string>
    <string name="save_location">Save Location</string>
    <string name="place_pin_at_your_property_location">Place Pin at your property location</string>
    <string name="search_by_name_or_id">Search By Name or ID</string>
    <string name="enter_search_here">Enter search here</string>
    <string name="subcategory">Subcategory</string>
    <string name="select">Select</string>
    <string name="area_coverage">Area Coverage</string>
    <string name="spoken_languages">Spoken Languages</string>
    <string name="location">Location</string>
    <string name="chat">Chat</string>
    <string name="data_not_found">Data not found</string>
    <string name="contact_admin">Contact Admin</string>
    <string name="select_reason">Select Reason</string>
    <string name="enter_details">Enter Details</string>
    <string name="purpose">Purpose</string>
    <string name="available_for">Available For</string>
    <string name="enter_propertyid">Enter PropertyID</string>
    <string name="select_category">Select Category</string>
    <string name="select_sub_category">Select Subcategory</string>
    <string name="commercial">commercial</string>
    <string name="residential">residential</string>
    <string name="family">family</string>
    <string name="single">single</string>
    <string name="number_of_bedrooms">Number of Bedrooms</string>
    <string name="number_of_bathrooms">Number of Bathrooms</string>
    <string name="number_of_kitchen">Number of Kitchen</string>
    <string name="build_size">Build Size</string>
    <string name="budget">Budget</string>
    <string name="more">More</string>
    <string name="enter">Enter</string>
    <string name="my_business_profile">My Business Profile</string>
    <string name="account_status">Account Status</string>
    <string name="full_name">Full name</string>
    <string name="business_sub_category">Business Sub-Category</string>
    <string name="sub_category">Sub-Category</string>
    <string name="upload_images">Upload Images</string>
    <string name="upload_video">Upload Video</string>
    <string name="save_amp_next"><![CDATA[Save & Next]]></string>
    <string name="notifications">Notifications</string>
    <string name="previous_chat_with_admin">Previous Chat with Admin</string>
    <string name="submit">Submit</string>
    <string name="both">both</string>
    <string name="business_category">Business category</string>
    <string name="property_title">Property title</string>
    <string name="enter_property_title">Enter property title</string>
    <string name="floor">Floor</string>
    <string name="next">next</string>
    <string name="reason">Reason</string>
    <string name="search_by_id">Search By Id</string>
    <string name="search_by_name">Search By Name</string>
    <string name="enter_area">Enter area</string>
    <string name="show_all">show all</string>
    <string name="reset">reset</string>
    <string name="professional_property_listing">Property Listing</string>
    <string name="set_price_information">Set Price Information</string>
    <string name="price_per_meter_sar">Price per meter($)</string>
    <string name="size_m2">Size m2(Plot Size)</string>
    <string name="total_price_sar">Total Price($)</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="speak_language">Speak Language</string>
    <string name="app_language">App Language</string>
    <string name="currency">Currency</string>
    <string name="measurement">Measurement</string>
    <string name="_logout">Logout</string>
    <string name="_all">All</string>
    <string name="_p_name">Professional Name</string>
    <string name="_licence_no_2314568">Licence No. XXXXXXXXXXX</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="business_id_5263632">Business ID 5263632</string>
    <string name="business_detail">Business detail</string>
    <string name="business_name">Business Name</string>
    <string name="title">Title</string>
    <string name="lorem_ipsu_is_simply_dummy_text">Lorem Ipsu, is simply dummy text.</string>
    <string name="_4_09_pm">4:09 pm</string>
    <string name="hello">Hello</string>
    <string name="_8_000sq_mtr">8,000sq. mtr.</string>
    <string name="_10_sq_mtr">$ 10/sq. mtr.</string>
    <string name="notification_1_content_here">Notification 1 content here</string>
    <string name="professional_name">Professional Name</string>
    <string name="listing_3">Listing 3</string>
    <string name="add_location_by_map">Add Location By Map</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="area_locality">Area/Locality</string>
    <string name="zip_code">ZIP Code</string>
    <string name="address">Address</string>
    <string name="apt_suite_no">Apt/Suite No.</string>
    <string name="building_no_name">Building No./Name</string>
    <string name="add_specifications">Add Specifications</string>
    <string name="select_your_property_specifications">Select your property specifications</string>
    <string name="allow_app_to_access_your_location">Allow App to Access Your location</string>
    <string name="don_t_allow">Don\'t Allow</string>
    <string name="allow">Allow</string>
    <string name="sort_by_alphabetically">Sort by alphabetically</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="set_default_time_amp_date"><![CDATA[Set Default Time & Date]]></string>
    <string name="rent_time">Rent Time</string>
    <string name="total_price">Total Price</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="gallery">Gallery</string>
</resources>