<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark_blue"
    android:orientation="horizontal"
    android:weightSum="3"
    android:padding="15dp"
    android:baselineAligned="false">

    <LinearLayout
        android:id="@+id/camera_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/camera_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="@color/white"
            android:background="@android:drawable/ic_menu_camera"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sdp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/gallery_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/gallery_img"
            android:layout_width="wrap_content"
            android:tint="@color/white"
            android:layout_height="wrap_content"
            android:background="@android:drawable/ic_menu_gallery"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gallery"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sdp"  />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cancel_view"
        android:layout_width="0dp"
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/remove_img"
            android:tint="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/ic_menu_delete"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sdp" />
    </LinearLayout>
</LinearLayout>