<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/set_price_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/white"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp">

                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/_8sdp"
                    android:src="@drawable/icon_back" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/set_default_time_amp_date"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />


                </LinearLayout>


            </LinearLayout>
        </android.support.v7.widget.Toolbar>

        <View
            android:id="@+id/view_set_price"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="@+id/set_price_toolbar" />


        <TextView
            android:id="@+id/textView73"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/rent_time"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_set_price" />


        <TextView
            android:id="@+id/textView74"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:text="@string/total_price"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView73" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView73">

            <RadioButton
                android:id="@+id/rbDaily"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:button="@drawable/bg_radio_btn"
                android:paddingLeft="12dp"
                android:text="@string/daily" />

            <RadioButton
                android:id="@+id/rbWeekly"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_36sdp"
                android:button="@drawable/bg_radio_btn"
                android:paddingLeft="12dp"
                android:text="@string/weekly" />

            <RadioButton
                android:id="@+id/rbMonthly"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_36sdp"
                android:button="@drawable/bg_radio_btn"
                android:paddingLeft="12dp"
                android:text="@string/monthly" />

            <RadioButton
                android:id="@+id/rbYearly"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_36sdp"
                android:button="@drawable/bg_radio_btn"
                android:paddingLeft="12dp"
                android:text="@string/yearly" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView75"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="@+id/textView74"
            app:layout_constraintStart_toStartOf="@+id/textView74"
            app:layout_constraintTop_toBottomOf="@+id/textView74" />

        <TextView
            android:id="@+id/textView77"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="@+id/textView74"
            app:layout_constraintStart_toStartOf="@+id/textView74"
            app:layout_constraintTop_toBottomOf="@+id/textView75" />

        <TextView
            android:id="@+id/textView78"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="@+id/textView74"
            app:layout_constraintStart_toStartOf="@+id/textView74"
            app:layout_constraintTop_toBottomOf="@+id/textView77" />

        <TextView
            android:id="@+id/textView79"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="@+id/textView74"
            app:layout_constraintStart_toStartOf="@+id/textView74"
            app:layout_constraintTop_toBottomOf="@+id/textView78" />

        <TextView
            android:id="@+id/textView80"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:text="@string/get_default_note"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />


        <TextView
            android:id="@+id/tvSaveSetPrice"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/bg_blue_btn"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>
</layout>