<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layout_1_sortby_bottomsheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sort_by_alphabetically"
                    android:textColor="@color/dark_blue"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCancelAlphabetically"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:text="@string/cancel"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:id="@+id/done_sortsheet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/done"
                    android:textColor="@color/dark_blue"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    android:visibility="gone" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@android:color/darker_gray" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_2_sortby_bottomsheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_1_sortby_bottomsheet"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_24sdp"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/rgAlphabetically"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">


                    <RadioButton
                        android:id="@+id/rbName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_weight="1"
                        android:button="@drawable/bg_radio_btn"
                        android:paddingLeft="10dp"
                        android:text="@string/name" />

                    <RadioButton
                        android:id="@+id/rbCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_weight="1"
                        android:button="@drawable/bg_radio_btn"
                        android:paddingLeft="10dp"
                        android:text="@string/category" />

                </RadioGroup>

            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>
</layout>