<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_48sdp">

        <TextView
            android:id="@+id/text_dialog_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/allow_app_to_access_your_location"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_20ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_36sdp"
            android:layout_below="@+id/text_dialog_location"
            android:layout_marginTop="@dimen/_24sdp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_weight="1"
                android:background="@drawable/dark_blue_with_corner"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/don_t_allow"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14ssp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/_32sdp"
                android:layout_weight="1"
                android:background="@drawable/dark_red_with_corner"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/allow"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14ssp" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</layout>